[package]
name = "nutriscore"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jendrikw/nutriscore"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
clap = { version = "3.2.17", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
indicatif = "0.17.0"
bauxite = "0.1.0"